--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
         <nav>
-        <a href=""> WebStudio </a>
+        <a href="./index.html"> WebStudio </a>
             <ul>
                 <li><a href=""> Студія </a></li>
                 <li><a href=""> Портфоліо</a></li>
@@ -55,18 +55,18 @@
             Наша команда
         </h2>
         <ul>
-            <li><img src="./images/img(1).jpg" alt="Чоловік в окулярах" width="270"> <h3>Ігор Дем'яненко</h3> <p>Product Designer</p></li>
-            <li><img src="./images/img(2).jpg" alt="Світловолоса жінка в окулярах" width="270"> <h3>Ольга Рєпіна</h3> <p>Frontend Developer</p></li>
-            <li><img src="./images/img(3).jpg" alt="Усміхнений чоловік" width="270"> <h3>Микола Тарасов</h3> <p>Marketing</p></li>
-            <li><img src="./images/img(4).jpg" alt="Чоловік в окулярах" width="270"> <h3>Михайло Єрмаков</h3> <p>UI Designer</p></li>
+            <li><img src="./images/img(ihor).jpg" alt="Чоловік в окулярах" width="270"> <h3>Ігор Дем'яненко</h3> <p>Product Designer</p></li>
+            <li><img src="./images/img(olha).jpg" alt="Світловолоса жінка в окулярах" width="270"> <h3>Ольга Рєпіна</h3> <p>Frontend Developer</p></li>
+            <li><img src="./images//img(mykola).jpg" alt="Усміхнений чоловік" width="270"> <h3>Микола Тарасов</h3> <p>Marketing</p></li>
+            <li><img src="./images/img(myhayilo).jpg" alt="Чоловік в окулярах" width="270"> <h3>Михайло Єрмаков</h3> <p>UI Designer</p></li>
         </ul>
     </section>
     </main>
     <footer>
-        <a href=""> WebStudio </a>
+        <a href="./index.html"> WebStudio </a>
         <address>
             <ul>
-                <li>м. Київ, пр-т Лесі Українки, 26 </li>
+                <li><a href="https://goo.gl/maps/SLWkWDjMxcwVBbJh7" target="_blank" rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a> </li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
